# ptm-team

./: .gitignore  .ptm-field-feedback.yaml  DEV-LOG.md  README.md  process  pyproject.toml
agents/: README.md  ngfw-factory-installer.md  ptm-qa.md  ptm-tae.md  ptm-tde.md  ptm-te.md  ptm-tm.md  ptm-tse.md
checkpoints/: README-MIGRATION.md
delivery/: README.md
docs/: .gitignore  ptm-team-blueprint.md
evals/: CASE-REGISTRY.yaml  EVAL-BACKLOG.md  EVAL-COVERAGE-MATRIX.md  PROMPT-BUNDLE.yaml  RELEASE-CHECK-PROFILE.yaml  RUNTIME-SAMPLE-REGISTRY.yaml  WORKFLOW-EVAL.yaml  WORKFLOW-MANIFEST.yaml
process/: CLARIFICATION-LOG-ptm-tde.md  DEVELOPMENT-PLAN-ptm-tde.yaml  INPUT-INDEX.md  REQUEST.md  STATE.md  STORY-BACKLOG.md  STORY-STATUS-ptm-tde.md
resource/: component-resource-links.yaml
script/: README.md  field_feedback.py  install.py  skills_manager.py
scripts/: process_coupling_excel.py
skills/: README.md  conf.json
skills/traffic-skill/: SKILL.md  pyproject.toml  traffic_config.json
skills/traffic-skill/configs/: node2_tg_dut.yml  topology_example.yaml
skills/traffic-skill/src/traffic_skill/: __init__.py  cli.py  config.py  defaults.py
skills/traffic-skill/src/traffic_skill/instrument/: __init__.py  base.py  ixiac.py  ssh.py  types.py
skills/traffic-skill/src/traffic_skill/models/: __init__.py  link.py  traffic.py
skills/trex-traffic/: SKILL.md  pyproject.toml
skills/trex-traffic/references/: six-atom-walkthrough.md
skills/trex-traffic/src/trex_api/: __init__.py  api.py  cli.py  models.py  port_mapping.py  runtime.py  schemas.py  service.py  settings.py
skills/trex-traffic/src/trex_api/ops/: __init__.py  registry.py
skills/trex-traffic/src/trex_api/trex/: __init__.py  api_client.py  stats_parser.py  template_renderer.py
tests/: test_cr018_p2.py  test_field_feedback.py  test_reinstall.py  (+6 more)
(+335 files in other folders)
