[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trex-api"
version = "0.0.0"
description = "TRex traffic-generator service and CLI wrapper for PTM test automation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tg = "trex_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires an explicitly configured real TRex environment",
]
